--- a/index.html
+++ b/index.html
@@ -506,6 +506,26 @@
             </li>
           </ul>
         </div>
+        <div class="footer-subscribe">
+          <p class="footer-title">Subscribe</p>
+          <form class="subscribe-form">
+            <label for="subscribe-email"
+              ><input
+                type="email"
+                class="subscribe-form-input"
+                id="subscribe-email"
+                name="subscribe-email"
+                placeholder="E-mail"
+                required
+            /></label>
+            <button class="subscribe-form-button" type="submit">
+              Subscribe
+              <svg class="subscribe-form-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
@@ -515,6 +535,85 @@
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
+
+        <p class="modal-text">Leave your contacts and we will call you back</p>
+        <form class="contact-form">
+          <div class="contact-form-field">
+            <label class="contact-form-label" for="user-name"> Name </label>
+            <div class="input-wrapper">
+              <input
+                class="contact-form-input"
+                id="user-name"
+                name="user-name"
+                type="text"
+                required
+              />
+              <svg width="18" height="24" class="contact-form-icon">
+                <use href="./images/icons.svg#icon-person "></use>
+              </svg>
+            </div>
+          </div>
+          <div class="contact-form-field">
+            <label class="contact-form-label" for="user-number">Phone</label>
+            <div class="input-wrapper">
+              <input
+                class="contact-form-input"
+                id="user-number"
+                name="user-number"
+                type="text"
+                required
+              />
+              <svg width="18" height="24" class="contact-form-icon">
+                <use href="./images/icons.svg#icon-phone "></use>
+              </svg>
+            </div>
+          </div>
+          <div class="contact-form-field">
+            <label class="contact-form-label" for="user-email"> Email </label>
+            <div class="input-wrapper">
+              <input
+                class="contact-form-input"
+                id="user-email"
+                name="user-email"
+                type="email"
+                required
+              />
+              <svg width="18" height="24" class="contact-form-icon">
+                <use href="./images/icons.svg#icon-email "></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="textarea-wrapper">
+            <label class="contact-form-label" for="user-comment">Comment</label>
+            <textarea
+              name="user-comment"
+              id="user-comment"
+              class="contact-form-textarea"
+              placeholder="Text input"
+              required
+            ></textarea>
+          </div>
+          <div class="checkbox-wrapper">
+            <input
+              value="true"
+              class="visually-hidden checkbox-input"
+              id="user-privacy"
+              type="checkbox"
+              name="user-privacy"
+              required
+            />
+            <label class="checkbox-label" for="user-privacy">
+              <span class="custom-checkbox">
+                <svg width="10" height="8" class="checkbox-icon">
+                  <use href="./images/icons.svg#icon-check"></use></svg
+              ></span>
+              I accept the terms and conditions of the
+              <a class="privacy-policy" href="#">Privacy Policy</a>
+            </label>
+          </div>
+          <button type="submit" class="contact-form-button">Send</button>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
