--- a/portfolio.html
+++ b/portfolio.html
@@ -337,6 +337,26 @@
             </li>
           </ul>
         </div>
+        <div class="footer-subscribe">
+          <p class="footer-title">Subscribe</p>
+          <form class="subscribe-form">
+            <label for="subscribe-email"
+              ><input
+                type="email"
+                class="subscribe-form-input"
+                id="subscribe-email"
+                name="subscribe-email"
+                placeholder="E-mail"
+                required
+            /></label>
+            <button class="subscribe-form-button" type="submit">
+              Subscribe
+              <svg class="subscribe-form-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
