--- a/index.html
+++ b/index.html
@@ -509,8 +509,8 @@
         <div class="footer-subscribe">
           <p class="footer-title">Subscribe</p>
           <form class="subscribe-form">
-            <label for="subscribe-email"
-              ><input
+            <label class="visually-hidden" for="subscribe-email"
+              >Email<input
                 type="email"
                 class="subscribe-form-input"
                 id="subscribe-email"
