--- a/index.html
+++ b/index.html
@@ -509,8 +509,9 @@
         <div class="footer-subscribe">
           <p class="footer-title">Subscribe</p>
           <form class="subscribe-form">
-            <label class="visually-hidden" for="subscribe-email"
-              >Email<input
+            <label class="subscribe-label" for="subscribe-email"
+              ><span class="visually-hidden">Email</span
+              ><input
                 type="email"
                 class="subscribe-form-input"
                 id="subscribe-email"
